src/objects/Billing_Arrangement_Types__mdt.object
<CustomObject>
    <description>List of Billing Arrangement Types which are in Scope (Eg: Usage, Fixed, UseRisk)</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicable_On_BADP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applicable On BADP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicable_On_Cart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applicable On Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BA_Type_Code__c</fullName>
        <label>BA Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GenChemical_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GenChemical Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GenEquipment_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GenEquipment Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Billing Arrangement Type</label>
    <pluralLabel>Billing Arrangement Types</pluralLabel>
</CustomObject>